--- a/todoList/package.json
+++ b/todoList/package.json
@@ -1,14 +1,18 @@
 {
+  "homepage": "http://JoaoMaccari.github.io/Todo-List-React",
   "name": "todolist",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
