--- a/todoList/package.json
+++ b/todoList/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://JoaoMaccari.github.io/Todo-List-React",
-  "name": "todolist",
+  "name": "Todo-List-React",
   "private": true,
   "version": "0.0.0",
   "type": "module",
